<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white">

  <include layout="@layout/shared_header_view"/>

  <TextView android:id="@+id/source_code"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/feedback_and_help_button_source_code"
          android:textColor="@color/app_theme"
          android:padding="@dimen/feedback_and_help_button_padding_8dp"
          android:background="@drawable/shared_button_selector"/>
  <ImageView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shared_divider_1dp"/>
  <TextView android:id="@+id/feedback"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/feedback_and_help_button_feedback"
          android:textColor="@color/app_theme"
          android:padding="@dimen/feedback_and_help_button_padding_8dp"
          android:background="@drawable/shared_button_selector"/>
  <ImageView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shared_divider_1dp"/>
  <TextView android:id="@+id/contact_developer"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/feedback_and_help_button_contact_developer"
          android:textColor="@color/app_theme"
          android:padding="@dimen/feedback_and_help_button_padding_8dp"
          android:background="@drawable/shared_button_selector"/>
  <ImageView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/shared_divider_1dp"/>
  <TextView
    android:id="@+id/app_version_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/shared_feedback_layout_margin_top_10dp"
    android:textColor="@android:color/darker_gray"
    android:alpha="0.8"
    android:layout_gravity="bottom"
    android:gravity="center"/>

</LinearLayout>