<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context="com.tt.reminder.fragment.EditTaskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/shared_header_view" />

        <TextView
            android:id="@+id/tv_subtitle_what_to_do"
            style="@style/subtitle_style_in_layout_fragment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/shared_divider"
            android:paddingTop="@dimen/top_subtitle_padding_top_in_layout_fragment_edit"
            android:text="@string/subtitle_what_to_do" />

        <EditText
            android:id="@+id/edt_subtitle_what_to_do"
            style="@style/edit_view_style_in_layout_fragment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_subtitle_what_to_do" />

        <TextView
            android:id="@+id/tv_subtitle_due_date"
            style="@style/subtitle_style_in_layout_fragment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/shared_divider"
            android:text="@string/subtitle_due_date" />

        <LinearLayout
            style="@style/edit_view_style_in_layout_fragment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_alarm_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:hint="@string/hint_alarm_date_date_not_set"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/date_picker_dialog"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_marginEnd="@dimen/header_view_margin_right_and_left_between_view"
                android:layout_marginStart="@dimen/header_view_margin_right_and_left_between_view"
                android:scaleType="fitCenter"
                android:src="@drawable/datepicker" />

            <ImageView
                android:id="@+id/cross_to_clear_picked_date"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_marginEnd="@dimen/header_view_margin_right_and_left_between_view"
                android:layout_marginStart="@dimen/header_view_margin_right_and_left_between_view"
                android:scaleType="fitCenter"
                android:src="@drawable/cross"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            style="@style/edit_view_style_in_layout_fragment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edt_alarm_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:editable="false"
                android:hint="@string/hint_alarm_time_not_set"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/time_picker_dialog"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_marginEnd="@dimen/header_view_margin_right_and_left_between_view"
                android:layout_marginStart="@dimen/header_view_margin_right_and_left_between_view"
                android:scaleType="fitCenter"
                android:src="@drawable/time_picker" />

            <ImageView
                android:id="@+id/cross_to_clear_picked_time"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_marginEnd="@dimen/header_view_margin_right_and_left_between_view"
                android:layout_marginStart="@dimen/header_view_margin_right_and_left_between_view"
                android:scaleType="fitCenter"
                android:src="@drawable/cross"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/subtitle_repeat"
            style="@style/subtitle_style_in_layout_fragment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/shared_divider"
            android:text="@string/subtitle_repeat" />

        <LinearLayout
            style="@style/edit_view_style_in_layout_fragment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_interval_to_repeat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"></Spinner>

            <ImageView
                android:id="@+id/new_interval"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_marginEnd="@dimen/header_view_margin_right_and_left_between_view"
                android:layout_marginStart="@dimen/header_view_margin_right_and_left_between_view"
                android:src="@drawable/add" />

        </LinearLayout>

        <TextView
            android:id="@+id/subtitle_add_to_list"
            style="@style/subtitle_style_in_layout_fragment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableBottom="@drawable/shared_divider"
            android:text="@string/subtitle_add_to_list" />

        <LinearLayout
            style="@style/edit_view_style_in_layout_fragment_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"></Spinner>

            <ImageView
                android:id="@+id/new_group"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_marginEnd="@dimen/header_view_margin_right_and_left_between_view"
                android:layout_marginStart="@dimen/header_view_margin_right_and_left_between_view"
                android:src="@drawable/add" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
